# ProjectOOP

./: README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_product_py.html  z_145eef247bfb46b6_create_class_objects_py.html  z_145eef247bfb46b6_heirs_product_py.html  z_145eef247bfb46b6_print_mixin_py.html  z_145eef247bfb46b6_product_and_category_py.html  z_145eef247bfb46b6_products_iterator_py.html
src/: create_class_objects.py  heirs_product.py  print_mixin.py  product_and_category.py  products_iterator.py
tests/: conftest.py  test_base_product.py  test_create_class_objects.py  test_heirs_product.py  test_print_mixin.py  test_product_and_category.py  test_products_iterator.py
