[tool.poetry]
name = "projectoop"
version = "0.1.0"
description = ""
authors = ["Sergey Minin <sm.minins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv, .venv'


[tool.black]
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
 /(
 \.eggs # Исключить несколько общих каталогов
 | \.git # в корне проекта
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | dist
 )/
 | foo.py # Также отдельно исключить файл с именем foo.py
 # в корне проекта
)
'''

[tool.isort]
line_length = 119
multi_line_output = 3
force_single_line = true
